StudentServiceTest add all tests