@@ -2,6 +2,7 @@ package ait.cohort5860.student.service;
 
 import ait.cohort5860.configuration.ServiceConfiguration;
 import ait.cohort5860.student.dao.StudentRepository;
+import ait.cohort5860.student.dto.ScoreDto;
 import ait.cohort5860.student.dto.StudentCredentialsDto;
 import ait.cohort5860.student.dto.StudentDto;
 import ait.cohort5860.student.dto.StudentUpdateDto;
@@ -15,10 +16,8 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
@@ -32,7 +31,11 @@ public class StudentServiceTest {
     private final long studentId = 1000L;
     private final String name = "John";
     private final String password = "1234";
+    private final String examName = "Math";
+    private final Integer score = 95;
+
     private Student student;
+    private ScoreDto scoreDto;
 
     @Autowired
     private ModelMapper modelMapper;
@@ -45,6 +48,7 @@ public class StudentServiceTest {
     public void setUp() {
         student = new Student(studentId, name, password);
         studentService = new StudentServiceImpl(studentRepository, modelMapper);
+        scoreDto = new ScoreDto(examName, score);
     }
 
     @Test
@@ -81,7 +85,6 @@ public class StudentServiceTest {
         when(studentRepository.findById(studentId)).thenReturn(Optional.ofNullable(student));
 
         // Act
-        // if we test, we should call this method
         StudentDto studentDto = studentService.findStudent(studentId);
 
         // Assert
@@ -115,7 +118,7 @@ public class StudentServiceTest {
     }
 
     @Test
-    void updateStudent() {
+    void testUpdateStudent() {
         // Arrange
         String newName = "newName";
         when(studentRepository.findById(studentId)).thenReturn(Optional.ofNullable(student));
@@ -133,43 +136,103 @@ public class StudentServiceTest {
 
     }
 
+    @Test
+    void testAddScoreWhenStudentExists() {
+        // Arrange
+        when(studentRepository.findById(studentId)).thenReturn(Optional.of(student));
+        when(studentRepository.save(any(Student.class))).thenReturn(student);
 
-    // addScore
+        // Act
+        boolean result = studentService.addScore(studentId, scoreDto);
 
-    // findStudentsByName
+        // Assert
+        assertTrue(result);
+        assertEquals(score, student.getScores().get(examName));
+        verify(studentRepository).save(student);
+    }
 
+    //-----------------------------------------------------------------------
+    @Test
+    void testAddScoreWhenStudentNotExists() {
+        // Arrange
+        long id = 2000L;
+        when(studentRepository.findById(id)).thenReturn(Optional.empty());
 
-    // countStudentsByNames
+        // Act & Assert
+        assertThrows(NotFoundException.class, () -> studentService.addScore(id, scoreDto));
+        verify(studentRepository, never()).save(any(Student.class));
+    }
+
+    @Test
+    void testFindStudentsByNameWhenSomethingIsFound() {
+        // Arrange
+        when(studentRepository.findByNameIgnoreCase(name)).thenReturn(Stream.of(student));
+
+        // Act
+        List<StudentDto> students = studentService.findStudentsByName(name);
+
+        // Assert
+        assertFalse(students.isEmpty());
+        assertEquals(1, students.size());
+        assertTrue(students.stream().allMatch(s -> s.getName().equalsIgnoreCase(name)));
+    }
+
+    @Test
+    void testFindStudentsByNameWhenNothingIsFound() {
+        // Arrange
+        String name = "Peter";
+        when(studentRepository.findByNameIgnoreCase(name)).thenReturn(Stream.empty());
+
+        // Act
+        List<StudentDto> students = studentService.findStudentsByName(name);
+
+        // Assert
+        assertNotNull(students);
+        assertTrue(students.isEmpty());
+        verify(studentRepository, times(1)).findByNameIgnoreCase(name);
+    }
 
     @Test
     void testCountStudentsByNames() {
         // Arrange
-        Set<String> names = new HashSet<>(Arrays.asList("John", "Peter"));
-        when(studentRepository.countByNameIn(names)).thenReturn(2L);
+        Set<String> names = new HashSet<>(List.of("John", "Peter"));
+        Long result = 1L;
+        when(studentRepository.countByNameIn(names)).thenReturn(result);
 
         // Act
         Long count = studentService.countStudentsByNames(names);
 
         // Assert
-        assertEquals(2L, count);
+        assertEquals(result, count);
     }
 
-    @Override
-    public Long countStudentsByNames(Set<String> names) {
-        return studentRepository.countByNameIn(names);
-        //return studentRepository.countByNameInIgnoreCase(names);
+    @Test
+    void testFindStudentsByExamNameMinScoreWhenSomethingIsFound() {
+        // Arrange
+        Integer minScore = 90;
+        when(studentRepository.findByExamAndScoreGreaterThan(examName, minScore)).thenReturn(Stream.of(student));
+
+        // Act
+        List<StudentDto> result = studentService.findStudentsByExamNameMinScore(examName, minScore);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertTrue(result.stream().allMatch(s -> s.getId().equals(studentId)));
     }
 
+    @Test
+    void testFindStudentsByExamNameMinScoreWhenNothingIsFound() {
+        // Arrange
+        Integer minScore = 99;
+        when(studentRepository.findByExamAndScoreGreaterThan(examName, minScore)).thenReturn(Stream.empty());
 
+        // Act
+        List<StudentDto> result = studentService.findStudentsByExamNameMinScore(examName, minScore);
 
-
-
-
-
-
-    // findStudentsByExamNameMinScore
+        // Assert
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
+        verify(studentRepository, times(1)).findByExamAndScoreGreaterThan(examName, minScore);
+    }
 }
-
-// Arrange
-// Act
-// Assert
